--- a/branches/development/application/views/scripts/index/level.phtml
+++ b/branches/development/application/views/scripts/index/level.phtml
@@ -7,7 +7,7 @@
     <ul>
 	  <li><b>0</b> Unauthorizesed access. Everything is forbitten.</li>
 	  <li><b>1</b> Entry level for new users. You may view the most of the content. Infos about other users is hidden.</li>
-	  <li><b>2</b> You have contributed some pics or messages to this database through on of the monitored groups or directly. You may view all the content including the infos about other users.</li>
+	  <li><b>2</b> You have contributed some pics or messages to this database through one of the monitored groups or directly. You may view all the content including the infos about other users.</li>
 	  <li><b>3</b> You were approved to be valueable. You may now suggest tags and connections</li>
 	  <li><b>4</b> You were approved to be a good. Your tags and connections are automaticly approved.</li>
 	  <li><b>5</b> You were approved to be a worthy. Your may approve tags and connections from other users.</li>
