--- a/branches/CRUD/application/views/scripts/index/index.phtml
+++ b/branches/CRUD/application/views/scripts/index/index.phtml
@@ -1,7 +1,9 @@
-
+	
 <?php
 	require_once ('_pageing.phtml');
 	require_once ('_table.phtml');
+	
+	echo "<h2>" . $this->escape($this->ControllerName) . "</h2>";
 	
 	printTable($this->data, $this->fields, $this, true);
 
