--- a/branches/CRUD/application/views/scripts/footer.phtml
+++ b/branches/CRUD/application/views/scripts/footer.phtml
@@ -1,17 +1,12 @@
+    </div>
+	<div id="footer">
+		<p>Copyright &copy; 2007 by zo13de. All rights reserved.</p>
+	</div>
+  </div>
 
-<?php
-	echo ' 
-</div>
- 
-
-<div class="Footer" id="Footer">
-	<p>Copyright &copy; 2007 <a href="/user/details?name=zo13de">zo13de</a>. All rights reserved.</p>
 	<br />
 	<br />
-</div>
 
 </body>
 
-</html>'
-
-?>
+</html>
