--- a/branches/CRUD/application/views/scripts/header.phtml
+++ b/branches/CRUD/application/views/scripts/header.phtml
@@ -1,11 +1,16 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="/stylesheets/global.css" type="text/css" media="screen" title="no title" charset="utf-8" />
 	<title>CRUD</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 
 <body>
 
-<?php echo '<div id="Main" >';  ?>
-
+  <div id="container">
+    <div id="header">
+      <h1>CRUD</h1>
+    </div>
+    <div id="content">
